Link to fontawesome and fix pagination visibility.

--- a/code/site/assets/main.css
+++ b/code/site/assets/main.css
@@ -2451,15 +2451,15 @@ table.dataTable thead th.sorting_desc:after { content: "\f0dd"; }
 
 .dataTables_filter input { border-radius: 20px; padding-left: 8px; border: 1px solid #dee2e6 !important; width: 170px; }
 
-.dataTables_length { margin-left: 5px; float: left; }
+.dataTables_length { position: absolute; left: 0px; padding-left: 5px; padding-top: 5px; bottom: -45px; width: 100%; background: #f2f2f2; border-radius: 0 0 10px 10px; }
 
-.dataTables_paginate { float: right; margin-right: 5px; margin-bottom: 0px; }
+.dataTables_paginate { position: absolute; bottom: -34px; right: 20px; }
 
 .dataTables_paginate > a:first-child { border-radius: 8px 0 0  8px; }
 
 .dataTables_paginate > a:last-child { border-radius: 0  8px  8px 0; }
 
-.paginate_button { border: 1px solid #dee2e6; padding: 5px; background: #f2f2f2; }
+.paginate_button { border: 1px solid #dee2e6; padding: 5px; background: #fff; }
 
 .current { background: #69b3a270; border: 1px solid #69b3a270; }
 
